--- a/app/src/main/res/layout/fragment_home2.xml
+++ b/app/src/main/res/layout/fragment_home2.xml
@@ -38,30 +38,12 @@
                 android:maxLines="1"
                 android:backgroundTint="#3c567b"
                 android:drawableLeft="@drawable/search"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="right">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/arrow_down" />
 
-                <TextView
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="전체 지역"
-                    android:textStyle="bold"
-                    android:textColor="#3c567b"/>
-            </LinearLayout>
             <RelativeLayout
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@drawable/blue">
+                android:background="@drawable/yellow">
                 <TextView
                     android:layout_marginStart="5dp"
                     android:id="@+id/tag"
@@ -119,13 +101,14 @@
                     android:layout_marginTop="70dp"/>
                 <ImageView
                     android:id="@+id/people_img"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginTop="5dp"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:src="@drawable/people"
                     android:layout_alignStart="@id/dashline"
                     android:layout_below="@id/dashline"/>
                 <TextView
+                    android:id="@+id/people_count"
                     android:layout_marginStart="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -135,6 +118,14 @@
                     android:layout_toRightOf="@id/people_img"
                     android:layout_alignBottom="@id/people_img"
                     android:layout_marginBottom="4dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="고냥이사랑"
+                    android:textColor="#3c567b"
+                    android:textStyle="bold"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignBaseline="@id/people_count"/>
             </RelativeLayout>
 
 
