--- a/app/src/main/res/layout/fragment_home1.xml
+++ b/app/src/main/res/layout/fragment_home1.xml
@@ -61,7 +61,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@drawable/blue">
+                android:background="@drawable/blue_page">
                 <TextView
                     android:layout_marginStart="5dp"
                     android:id="@+id/tag"
