--- a/app/src/main/res/layout/fragment_community1.xml
+++ b/app/src/main/res/layout/fragment_community1.xml
@@ -77,14 +77,15 @@
                 android:background="@drawable/blue_page">
                 <TextView
                     android:layout_marginStart="5dp"
-                    android:id="@+id/tag"
+                    android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="핸드폰 찾아주세요"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     android:textColor="#3c567b"/>
                 <ImageView
-                    android:id="@+id/gonggu_face_post_heart"
+                    android:id="@+id/commu_post_heart"
                     android:layout_marginEnd="10dp"
                     android:layout_toStartOf="@id/star"
                     android:layout_width="wrap_content"
@@ -97,15 +98,34 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/star_blank"/>
                 <TextView
-                    android:layout_below="@id/gonggu_face_post_heart"
-                    android:layout_alignLeft="@id/gonggu_face_post_heart"
-                    android:layout_alignRight="@id/gonggu_face_post_heart"
+                    android:id="@+id/heart_count"
+                    android:layout_below="@id/commu_post_heart"
+                    android:layout_alignLeft="@id/commu_post_heart"
+                    android:layout_alignRight="@id/commu_post_heart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10개"
                     android:textSize="10dp"
                     android:textStyle="bold"
                     android:textColor="#3c567b" />
+                <TextView
+                    android:id="@+id/main_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="방금 동작역쪽에서 핸드폰 잃어버렸는데 혹시 보신 분 있으실까요ㅜㅜㅜ 사례금 드릴게요ㅜㅜㅜ"
+                    android:textColor="#3c567b"
+                    android:layout_alignStart="@id/title"
+                    android:layout_below="@id/heart_count"/>
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10분전"
+                    android:textSize="13sp"
+                    android:textStyle="bold"
+                    android:textColor="#878787"
+                    android:layout_below="@id/main_text"
+                    android:layout_alignStart="@id/main_text"/>
 
 
 
