--- a/app/src/main/res/layout/fragment_community2.xml
+++ b/app/src/main/res/layout/fragment_community2.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragmentHome.FragmentHome1"
     android:background="@color/white">
 
@@ -39,11 +40,13 @@
                 android:backgroundTint="#3c567b"
                 android:drawableLeft="@drawable/search"/>
             <LinearLayout
+                android:layout_marginBottom="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <LinearLayout
+                    android:layout_weight="1"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
@@ -51,14 +54,75 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="1"
+                        android:textSize="20sp"
                         android:textColor="#3c567b"
                         android:gravity="center"
                         android:textStyle="bold"/>
 
+                    <androidx.cardview.widget.CardView
+                        android:layout_gravity="center"
+                        app:cardElevation="0dp"
+                        app:cardCornerRadius="15dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:src="@drawable/test"/>
+                    </androidx.cardview.widget.CardView>
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:layout_width="90dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:textSize="20sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="2"
+                        android:textColor="#3c567b"
+                        android:gravity="center"
+                        android:textStyle="bold"/>
 
+                    <androidx.cardview.widget.CardView
+                        android:layout_gravity="center"
+                        app:cardElevation="0dp"
+                        app:cardCornerRadius="15dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:src="@drawable/test"/>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:layout_width="90dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:textSize="20sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="3"
+                        android:textColor="#3c567b"
+                        android:gravity="center"
+                        android:textStyle="bold"/>
 
-
+                    <androidx.cardview.widget.CardView
+                        android:layout_gravity="center"
+                        app:cardElevation="0dp"
+                        app:cardCornerRadius="15dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:src="@drawable/test"/>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -98,15 +162,22 @@
                     android:textSize="10dp"
                     android:textStyle="bold"
                     android:textColor="#3c567b" />
-
-                <ImageView
-                    android:layout_marginStart="5dp"
+                <androidx.cardview.widget.CardView
                     android:id="@+id/tag_img"
-                    android:layout_marginTop="5dp"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_gravity="center"
                     android:layout_below="@+id/tag"
-                    android:src="@drawable/tissue" />
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="6dp"
+                    app:cardElevation="0dp"
+                    app:cardCornerRadius="15dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:src="@drawable/test" />
+                </androidx.cardview.widget.CardView>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
