--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -81,7 +81,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/pink">
+                android:background="@drawable/purple">
                 <TextView
                     android:layout_marginStart="70dp"
                     android:layout_width="wrap_content"
