--- a/app/src/main/res/layout/activity_leisure_writing.xml
+++ b/app/src/main/res/layout/activity_leisure_writing.xml
@@ -41,56 +41,21 @@
                 android:inputType="text"
                 android:maxLines="1" />
 
-            <LinearLayout
-                android:id="@+id/hello"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal">
 
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:text="질문글"
-                    android:textColor="#3c567b"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="end|center">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/arrow_down" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="20dp"
-                        android:text="전체 지역"
-                        android:textColor="#3c567b"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-
-            </LinearLayout>
 
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="480dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/whiteblue">
 
                 <EditText
                     android:layout_width="match_parent"
-                    android:layout_height="350dp"
+                    android:layout_height="430dp"
                     android:gravity="top"
-                    android:hint="내용을 입력해주세요" />
+                    android:hint="내용을 입력해주세요"
+                    android:background="@null"/>
 
                 <ImageButton
                     android:layout_width="wrap_content"
@@ -98,11 +63,21 @@
                     android:layout_alignParentBottom="true"
                     android:background="@android:color/transparent"
                     android:src="@drawable/image" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="#카테고리"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:textColor="#3c567b"/>
 
             </RelativeLayout>
 
 
         </LinearLayout>
+
 
         <Button
             android:layout_width="250dp"
