프래그먼트 뒤로가기 가능하게 수정

--- a/app/src/main/res/menu/main_menu_bottom.xml
+++ b/app/src/main/res/menu/main_menu_bottom.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/homeFragment"
         android:icon="@drawable/home"
-        android:title="홈" />
+        android:title="" />
     <item
         android:id="@+id/communityFragment"
         android:icon="@drawable/community"
