프래그먼트 파일

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentSetting">
+    tools:context=".Fragment.FragmentSetting">
 
     <LinearLayout
         android:layout_weight="90"
