--- a/app/src/main/res/layout/activity_community_writing.xml
+++ b/app/src/main/res/layout/activity_community_writing.xml
@@ -90,6 +90,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="350dp"
                     android:gravity="top"
+                    android:background="@android:color/transparent"
                     android:hint="내용을 입력해주세요" />
 
                 <ImageButton
