--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     tools:context=".Fragment.FragmentSetting">
 
@@ -37,10 +38,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <ImageView
+                <androidx.cardview.widget.CardView
+                    android:layout_gravity="center"
+                    app:cardElevation="0dp"
+                    app:cardCornerRadius="15dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/cat"/>
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:src="@drawable/cat"/>
+                </androidx.cardview.widget.CardView>
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
