--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,6 +52,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <LinearLayout
+                        android:id="@+id/home_gonggu_pageBTN"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/blue"
@@ -84,6 +85,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/home_gonggu_deli_pageBTN"
                         android:layout_marginTop="30dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -116,6 +118,7 @@
                             android:text="햇반2종"/>
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/home_playing_pageBTN"
                         android:layout_marginTop="30dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
